changed app.css -> fixed shitty padding and margin spacing...

--- a/head-wind/src/components/headerNavBar/Header.css
+++ b/head-wind/src/components/headerNavBar/Header.css
@@ -1,6 +1,7 @@
 /* Header Navbar CSS */
 .navbar {
   background-color: #02274C;
+  width: 100%;
 }
 
 .logo {
